<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_301"
    tools:context=".yenihesapvar">

    <include
        android:id="@+id/actionbarregister"
        layout="@layout/actionbar_app" />

    <TextView
        android:id="@+id/txtınfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/actionbarregister"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/yen_hesap_olu_tur"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtınfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtınfo1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/yeni_kay_t_sayfas" />

    <EditText
        android:id="@+id/txtusername"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/txtınfo2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/edittext_border"
        android:hint="@string/kullan_c_ad"
        android:padding="7dp"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/txtemail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/edittext_border"
        android:padding="7dp"
        android:layout_below="@+id/txtusername"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/txtpassword"
        android:layout_width="match_parent"
        android:textColorHint="@color/black"
        android:background="@drawable/edittext_border"
        android:padding="7dp"
        android:layout_height="40dp"
        android:layout_below="@+id/txtemail"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:inputType="numberPassword"
        android:hint="@string/parola" />

    <Button
        android:id="@+id/btnregister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        android:text="@string/hesap_olu_tur"
        android:textColor="@color/white" />




</RelativeLayout>