<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#7A00BCD4"
    android:padding="20dp">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/iconpng"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/txtwelcomeAppName"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:id="@+id/txtwelcomeAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"

        />

    <Button
        android:id="@+id/hesapvarbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/yenihesapbtn"
        android:layout_marginBottom="25dp"
        android:background="@color/Red"
        android:text="@string/hesabim_var"
        android:textColor="@android:color/white"
        android:textStyle="bold"

        />

    <Button
        android:layout_width="match_parent"
        android:id="@+id/yenihesapbtn"
        android:layout_height="wrap_content"
        android:text="@string/yen_hesap_olu_tur"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@android:color/holo_red_dark"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp" />

</RelativeLayout>