<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/kullanici_gosterme_border"
    android:layout_margin="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">
    <de.hdodenhof.circleimageview.CircleImageView
        android:src="@drawable/icons8"
        android:id="@+id/kullaniciresmi"
        android:layout_marginTop="14dp"
        android:layout_width="70dp"
        android:layout_height="70dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/kullaniciAdi"
                    android:layout_width="220dp"
                    android:textColor="@color/black"
                    android:layout_height="30dp"
                    android:text="@string/kullan_c_adi"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textAlignment="textStart"
                    android:layout_margin="5dp"/>

                <ImageView
                    android:id="@+id/kullanicicevrimici"
                    android:layout_width="20dp"
                    android:layout_margin="5dp"
                    android:layout_height="20dp"
                    android:src="@drawable/ic_baseline_brightness_1_24"
                    android:visibility="invisible"/>
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/kullanicidurumu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/kullan_c_durumu"
                    android:textSize="16sp"
                    android:textAlignment="textStart"
                    android:layout_margin="5dp"/>

            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:id="@+id/talepkabulbutonu"
                android:background="@android:color/holo_blue_dark"
                android:text="@string/kabul"
                android:textColor="@android:color/white"
                android:textSize="11sp"
                android:visibility="invisible"
                />
                <Button
                    android:layout_marginStart="11dp"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:id="@+id/talepiptalbutonu"
                    android:background="@android:color/holo_red_dark"
                    android:text="@string/ptal"
                    android:textColor="@android:color/white"
                    android:textSize="11sp"
                    android:visibility="invisible"
                    />




            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>